# etl-agent

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  terraform.yml
agents/: bedrock_agent.py
config/: settings.yaml
docs/: RJY3P9TUkmlIq9Vs8hd5h.csv  aws_mfa_dev.sh  aws_mfa_prod.sh  design.md  workato_backup_restore.md
docs/adr/: 001-glue-over-emr.md  002-redshift-serverless.md
pipelines/: local_config.py
pipelines/discovery/: ai_discovery_agent.py  schema_discovery.py
pipelines/glue_jobs/: atlas_id_comparison.py  atlas_rds_query.py  course_comparison.py  deployer.py  gold_moodle_match.py  materialize_qsreport.py  sf_atlas_check.py  sf_uat_extract.py  transform.py
pipelines/linked_server_sync/: __init__.py  __main__.py  extract_tables.py  message_case_join.py
pipelines/publish/: verifier.py
pipelines/redshift_to_glue/: glue_job_generator.py  sql_parser.py  translator.py
pipelines/sf_moodle_sync/: SF CourseOffering.csv  (+8 more)
scripts/: bootstrap.sh  cleanup_glue_test_jobs.sh  create_view_aliases.sh  deploy.sh  deploy_atlas_comparison.sh  deploy_course_comparison.sh  deploy_qsreport.sh  deploy_sf_moodle_sync.sh  deploy_sf_read_test.sh  deploy_sf_uat_extract.sh  deploy_sync_test.sh  load_course_comparison.sh  load_uat_parquet.sh  local_moodle_report.py  replicate_prod_to_dev.sh  run_aws.sh  run_local.sh  seed_localstack.sh  seed_moodle.sh  seed_redshift.sql  seed_redshift_dev.sql  teardown.sh  validate_sync.sh  workato_backup.py
(+52 files in other folders)
