[project]
name = "etl-agent"
version = "0.1.0"
description = "ETL Agent — Redshift-to-Glue migration with AI-powered schema discovery"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
lint.select = ["E", "F", "I", "W"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
